Fix margin body spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,9 @@ html{
 	overflow-x: hidden;
 	width: 100%;
 }
+body{
+	margin: 0;
+}
 head {
 	position: fixed;
 }
